--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 
 main {
   padding: 36px;
+  margin: 0 auto;
+  width: 70%;
 }
 
 .header__container {
@@ -30,6 +32,8 @@ main {
 }
 
 .form__button {
+  margin: 0 auto;
+  width: 30%;
   grid-column: 1 / -1;
   border-radius: 5px;
   background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
