add text to image

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,6 @@
 
 main {
   padding: 36px;
-  margin: 0 auto;
-  width: 70%;
 }
 
 .header__container {
@@ -19,10 +17,10 @@ main {
 }
 
 .form {
-  text-align: center;
   display: grid;
   grid-template: 40px 40px / 1fr 1fr;
   gap: 17px;
+  margin-bottom: 17px;
 }
 
 .form__input {
@@ -42,13 +40,45 @@ main {
   cursor: pointer;
 }
 
-.meme__img--container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.meme {
+  position: relative;
 }
 
-.meme__img {
-  max-width: 100%;
-  padding-top: 5%;
+.meme__image {
+  max-width: 80%;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+
+.meme__text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+    2px 2px 0 #000,
+    -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    0 2px 0 #000,
+    2px 0 0 #000,
+    0 -2px 0 #000,
+    -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
