--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,11 @@ main {
   position: relative;
 }
 
+.image__container {
+  display: flex;
+  justify-content: center;
+}
+
 .meme__image {
   max-width: 80%;
   border-radius: 3px;
